--- a/index.html
+++ b/index.html
@@ -46,17 +46,25 @@
 
     <!-- MAIN -->
     <main>
-        <section>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui illo deserunt ab sint temporibus autem nihil eum iste explicabo dicta, exercitationem vitae nulla consectetur corporis commodi dolorum rerum, cupiditate odit?
-            Tempore, eos! Commodi est consequuntur sed porro ipsa! Quos cum quae ea illum ipsa sint corrupti consectetur at assumenda consequuntur. Possimus minus amet quo ratione est atque, ullam hic rerum.
-            Voluptatem soluta a, reiciendis nihil in tempore ipsa. Optio provident perspiciatis, fugit voluptate sunt, totam debitis nihil fuga nemo eveniet harum quam porro ipsum tenetur dicta velit adipisci illo. Dolores?
-            Natus consequatur fugit iste quos quas, tenetur, provident sed suscipit atque, nemo omnis consequuntur enim sit nam eaque a consectetur accusantium maiores ex odit explicabo voluptatibus praesentium! Porro, ullam animi.
-            Hic ex beatae culpa nesciunt et esse, dolore, at provident ipsam error, numquam accusamus aliquid rem iusto. A voluptatem quisquam quasi repellat labore perspiciatis! Accusantium eveniet doloremque ratione blanditiis harum.
-            Ex, reiciendis eaque iste provident ullam harum dolorum corporis, reprehenderit natus saepe blanditiis dolorem aliquid autem omnis quam animi rem magni sapiente asperiores, obcaecati pariatur non ducimus rerum? Exercitationem, animi.
-            Mollitia perferendis fuga ab, impedit odit voluptatibus consequatur maxime veniam quas labore odio soluta tenetur reprehenderit magnam quis ipsa doloribus molestias maiores unde vitae architecto eum reiciendis eligendi! Doloremque, corrupti?
-            Laudantium in aspernatur eius distinctio nemo soluta placeat, earum libero velit porro qui error odio saepe labore hic nobis quasi. Alias nisi error eligendi laboriosam ex saepe itaque voluptatibus vitae!
-            Earum maxime eius ea facilis id. Odio temporibus impedit unde ut in. Dignissimos necessitatibus, magni dolor eligendi minus, explicabo maxime recusandae quas atque possimus quia dolorem velit saepe, suscipit eius.
-            Aperiam alias at, nihil doloremque sint, voluptas velit est eum nobis voluptate quia itaque, architecto ducimus eaque repudiandae aliquam eos quam. Omnis, illum rem harum vitae labore saepe voluptate quia?
+        <section class="jumbotron">
+            <div class="container-large">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="flex">
+                    <div class="col-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem voluptate, veritatis facere modi placeat quaerat, necessitatibus excepturi fuga rerum quasi beatae? Hic repellat, porro ea vitae quasi nihil quam!
+                        Unde, repellendus fuga? Animi voluptatibus reprehenderit ducimus blanditiis possimus corrupti, vel fuga veniam eaque expedita maiores explicabo tempore ut officia error sint ullam? Facere culpa pariatur architecto, voluptate omnis eum.
+                        Ut tenetur consequuntur ea ullam non ad quibusdam a sit, dolor dolores aliquam vel libero! Voluptates totam quo sit. Itaque optio in voluptas modi eveniet soluta obcaecati, odit doloribus rerum.
+                        Rem quam natus odio ipsam, nisi autem tenetur dicta aspernatur distinctio dolorum quae adipisci id ad itaque. Vero distinctio sapiente est illum molestiae, quisquam fuga, animi tempore, similique deleniti aut.
+                        Possimus accusamus blanditiis corrupti facere? Sunt, deleniti rem ea maxime expedita nostrum laudantium fuga laborum esse dolorem dignissimos veniam molestias consequuntur. Soluta, accusantium autem. Voluptates mollitia atque voluptate vel rerum?
+                    </div>
+                    <div class="col-large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem voluptate, veritatis facere modi placeat quaerat, necessitatibus excepturi fuga rerum quasi beatae? Hic repellat, porro ea vitae quasi nihil quam!
+                        Unde, repellendus fuga? Animi voluptatibus reprehenderit ducimus blanditiis possimus corrupti, vel fuga veniam eaque expedita maiores explicabo tempore ut officia error sint ullam? Facere culpa pariatur architecto, voluptate omnis eum.
+                        Ut tenetur consequuntur ea ullam non ad quibusdam a sit, dolor dolores aliquam vel libero! Voluptates totam quo sit. Itaque optio in voluptas modi eveniet soluta obcaecati, odit doloribus rerum.
+                        Rem quam natus odio ipsam, nisi autem tenetur dicta aspernatur distinctio dolorum quae adipisci id ad itaque. Vero distinctio sapiente est illum molestiae, quisquam fuga, animi tempore, similique deleniti aut.
+                        Possimus accusamus blanditiis corrupti facere? Sunt, deleniti rem ea maxime expedita nostrum laudantium fuga laborum esse dolorem dignissimos veniam molestias consequuntur. Soluta, accusantium autem. Voluptates mollitia atque voluptate vel rerum?
+                    </div>
+                </div>
+    
+            </div>
         </section>
     </main>
     <!-- END MAIN -->
