--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
@@ -46,16 +47,34 @@
 
     <!-- MAIN -->
     <main>
+        <!-- jumbotron -->
         <section class="jumbotron">
             <div class="container-large">
+
+                <!-- title -->
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
                 <div class="flex">
-                    <div class="col-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem voluptate, veritatis facere modi placeat quaerat, necessitatibus excepturi fuga rerum quasi beatae? Hic repellat, porro ea vitae quasi nihil quam!
-                        Unde, repellendus fuga? Animi voluptatibus reprehenderit ducimus blanditiis possimus corrupti, vel fuga veniam eaque expedita maiores explicabo tempore ut officia error sint ullam? Facere culpa pariatur architecto, voluptate omnis eum.
-                        Ut tenetur consequuntur ea ullam non ad quibusdam a sit, dolor dolores aliquam vel libero! Voluptates totam quo sit. Itaque optio in voluptas modi eveniet soluta obcaecati, odit doloribus rerum.
-                        Rem quam natus odio ipsam, nisi autem tenetur dicta aspernatur distinctio dolorum quae adipisci id ad itaque. Vero distinctio sapiente est illum molestiae, quisquam fuga, animi tempore, similique deleniti aut.
-                        Possimus accusamus blanditiis corrupti facere? Sunt, deleniti rem ea maxime expedita nostrum laudantium fuga laborum esse dolorem dignissimos veniam molestias consequuntur. Soluta, accusantium autem. Voluptates mollitia atque voluptate vel rerum?
+                    <!-- column left -->
+                    <div class="col-small">
+
+                        <div class="text">
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </div>
+                        <div class="cta">
+                            <div class="cta-btn">
+                                <a href="#">Inizia la tua prova gratuita</a>
+                            </div>
+    
+                            <div class="undo-cta">
+                                <a href="#">Annulla in qualsiasi momento</a>
+                            </div>
+                        </div>
+                        <div class="arrow-down">
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                        </div>
                     </div>
+                    <!-- column right -->
                     <div class="col-large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem voluptate, veritatis facere modi placeat quaerat, necessitatibus excepturi fuga rerum quasi beatae? Hic repellat, porro ea vitae quasi nihil quam!
                         Unde, repellendus fuga? Animi voluptatibus reprehenderit ducimus blanditiis possimus corrupti, vel fuga veniam eaque expedita maiores explicabo tempore ut officia error sint ullam? Facere culpa pariatur architecto, voluptate omnis eum.
                         Ut tenetur consequuntur ea ullam non ad quibusdam a sit, dolor dolores aliquam vel libero! Voluptates totam quo sit. Itaque optio in voluptas modi eveniet soluta obcaecati, odit doloribus rerum.
