--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
                         </div>
                     </div>
                     <!-- column right -->
-                    <div class="col-large">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem voluptate, veritatis facere modi placeat quaerat, necessitatibus excepturi fuga rerum quasi beatae? Hic repellat, porro ea vitae quasi nihil quam!
-                        Unde, repellendus fuga? Animi voluptatibus reprehenderit ducimus blanditiis possimus corrupti, vel fuga veniam eaque expedita maiores explicabo tempore ut officia error sint ullam? Facere culpa pariatur architecto, voluptate omnis eum.
-                        Ut tenetur consequuntur ea ullam non ad quibusdam a sit, dolor dolores aliquam vel libero! Voluptates totam quo sit. Itaque optio in voluptas modi eveniet soluta obcaecati, odit doloribus rerum.
-                        Rem quam natus odio ipsam, nisi autem tenetur dicta aspernatur distinctio dolorum quae adipisci id ad itaque. Vero distinctio sapiente est illum molestiae, quisquam fuga, animi tempore, similique deleniti aut.
-                        Possimus accusamus blanditiis corrupti facere? Sunt, deleniti rem ea maxime expedita nostrum laudantium fuga laborum esse dolorem dignissimos veniam molestias consequuntur. Soluta, accusantium autem. Voluptates mollitia atque voluptate vel rerum?
+                    <div class="col-large">
+                        <img src="img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
     
