first col complete

--- a/index.html
+++ b/index.html
@@ -158,6 +158,41 @@
                             </div>
 
                             <hr>
+                            <!-- column footer -->
+
+                            <!-- title -->
+                            <h4>Punti salienti del piano</h4>
+
+                            <!-- highlights -->
+                            <ul>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span> 
+                                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                                </li>
+
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Cartelle offline su dispositivi mobili</span> 
+                                </li>
+
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Pulizia remota dell'account</span> 
+                                </li>
+
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Filigrana documento</span> 
+                                </li>
+                                
+                                <li>
+                                    <span class="check"><i class="fa-solid fa-check"></i></span>
+                                    <span>Assistenza prioritaria via email e chat</span> 
+                                </li>
+
+                            </ul>
+
+
                         </div>
     
                     </div>
