--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="col-large">
 
                         <!-- jumbotron image -->
-                        <img src="img/jumbo.png" alt="jumbo">
+                        <img  class="relative" src="img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
             </div>
@@ -201,12 +201,14 @@
 
                     <!-- column header -->
                     <div class="column-header">
-                        <span><i class="fa-regular fa-user"></i></span>
+                        <span><i class="fas fa-building"></i></span>
                         <span>Singolo</span>
                     </div>
 
                     <!-- column main -->
                     <div class="column-main-container">
+
+                        <!-- column Professional -->
                         <div class="column-main">
 
                             <!-- title -->
