--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="col-large">
 
                         <!-- jumbotron image -->
-                        <img  class="relative" src="img/jumbo.png" alt="jumbo">
+                        <img src="img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
             </div>
