Partner research in progress

--- a/index.html
+++ b/index.html
@@ -418,15 +418,26 @@
                         </div>
                     </div>
                 </div>
-
-            
-
-
+            </div>
+        </section>
+        <section>
+            <!-- Partner research-->
+            <div class="container-small flex">
+                <div class="col-large">
+                    <img src="img/partner.png" alt="partner">
+                </div>
+                <div class="col-small">
+                    <h3>TItolo</h3>
+                    <div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, vel perferendis ut, provident in fugit eum praesentium facere ipsa quae pariatur repellat, molestiae hic similique quisquam distinctio rem soluta voluptates.
+                        Alias quasi ipsam dicta velit. Libero eos, quia blanditiis at ullam architecto ea consectetur, quod pariatur, autem enim. Laboriosam corporis minus ipsum fugiat accusamus nemo, quas quibusdam. Ipsa, explicabo alias!
+                    </div>
+                    <div>
+                        button
+                    </div>
+                </div>
 
             </div>
-
-            </div>
-            
         </section>
     </main>
     <!-- END MAIN -->
