Partner research in progress

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-small">
 
                         <!-- text -->
-                        <div class="text">
+                        <div>
                             Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                         </div>
 
@@ -422,21 +422,25 @@
         </section>
         <section>
             <!-- Partner research-->
-            <div class="container-small flex">
-                <div class="col-large">
-                    <img src="img/partner.png" alt="partner">
-                </div>
-                <div class="col-small">
-                    <h3>TItolo</h3>
-                    <div>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, vel perferendis ut, provident in fugit eum praesentium facere ipsa quae pariatur repellat, molestiae hic similique quisquam distinctio rem soluta voluptates.
-                        Alias quasi ipsam dicta velit. Libero eos, quia blanditiis at ullam architecto ea consectetur, quod pariatur, autem enim. Laboriosam corporis minus ipsum fugiat accusamus nemo, quas quibusdam. Ipsa, explicabo alias!
+            <div class="partner-research">
+                <div class="container-small flex">
+                    <div class="col-large">
+                        <img src="img/partner.png" alt="partner">
                     </div>
-                    <div>
-                        button
+                    <div class="col-small">
+                        <div class="text">
+                            <h3>TItolo</h3>
+                            <div>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, vel perferendis ut, provident in fugit eum praesentium facere ipsa quae pariatur repellat, molestiae hic similique quisquam distinctio rem soluta voluptates.
+                                Alias quasi ipsam dicta velit. Libero eos, quia blanditiis at ullam architecto ea consectetur, quod pariatur, autem enim. Laboriosam corporis minus ipsum fugiat accusamus nemo, quas quibusdam. Ipsa, explicabo alias!
+                            </div>
+                            <div>
+                            button
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
