Partner research in progress

--- a/index.html
+++ b/index.html
@@ -429,13 +429,12 @@
                     </div>
                     <div class="col-small">
                         <div class="text">
-                            <h3>TItolo</h3>
+                            <h3>Entra in contatto con un partner Dropbox</h3>
                             <div>
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, vel perferendis ut, provident in fugit eum praesentium facere ipsa quae pariatur repellat, molestiae hic similique quisquam distinctio rem soluta voluptates.
-                                Alias quasi ipsam dicta velit. Libero eos, quia blanditiis at ullam architecto ea consectetur, quod pariatur, autem enim. Laboriosam corporis minus ipsum fugiat accusamus nemo, quas quibusdam. Ipsa, explicabo alias!
+                                Trova un patner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                             </div>
-                            <div>
-                            button
+                            <div class="cta-btn">
+                            Trova un partner
                             </div>
                         </div>
                         
