Partner research complete

--- a/index.html
+++ b/index.html
@@ -425,17 +425,20 @@
             <div class="partner-research">
                 <div class="container-small flex">
                     <div class="col-large">
+                        <!-- partner image -->
                         <img src="img/partner.png" alt="partner">
                     </div>
                     <div class="col-small">
+
                         <div class="text">
+                            <!-- title -->
                             <h3>Entra in contatto con un partner Dropbox</h3>
+                            <!-- text -->
                             <div>
                                 Trova un patner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                             </div>
-                            <div class="cta-btn">
-                            Trova un partner
-                            </div>
+                            <!-- btn -->
+                            <a class="btn" href="#">Trova un partner</a>
                         </div>
                         
                     </div>
