free trial complete

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                             <h3>Entra in contatto con un partner Dropbox</h3>
                             <!-- subtitle -->
                             <div>
-                                Trova un patner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                                Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                             </div>
                             <!-- btn -->
                             <a class="btn" href="#">Trova un partner</a>
@@ -618,6 +618,26 @@
                 </div>
                
 
+            </div>
+        </section>
+
+        <!-- Free Trial -->
+        <section>
+            <div class="free-trial">
+                <div class="container-small">
+                    <div class="flex">
+
+                        <!-- cta button -->
+                        <a class="btn" href="#">Inizia la tua prova gratuita</a>
+
+                    </div> 
+                    
+                    <!-- title -->
+                    <h2>
+                        Porta Dropbox Business <br>
+                        nella tua azienda.
+                    </h2>   
+                </div>  
             </div>
         </section>
     </main>
