Frequent questions in progress

--- a/index.html
+++ b/index.html
@@ -640,6 +640,14 @@
                 </div>  
             </div>
         </section>
+
+        <!-- Frequent questions -->
+        <section>
+            <div class="container-small">
+                <h3>Domande frequenti</h3>
+            </div>
+            
+        </section>
     </main>
     <!-- END MAIN -->
 
